feat: added two transaction api endpoints about account
